# backend

./: .env  .env.example  .gitignore  Cargo.toml  Cargo.toml.save  LEDGER_INTEGRATION.md  PROOF_OF_BUILD.md  README.md
.github/: copilot-instructions.md
.sqlx/: query-03625f2e9277b811299e99cfd866b8c3d48d205bcb42e7d57030f854cf5a6371.json  query-73b1c837f386903f78364ae9b7746bad38be0e93812106f670c479142f6c604f.json
migrations/: 20250115120000_create_settlement_liquidity.down.sql  20250115120000_create_settlement_liquidity.up.sql  20250115123000_create_onchain_settlement_log.down.sql  20250115123000_create_onchain_settlement_log.up.sql  20250115124500_add_ledger_rules_and_validation_status.down.sql  20250115124500_add_ledger_rules_and_validation_status.up.sql  20260211010000_add_missing_columns_for_frontend.down.sql  20260211010000_add_missing_columns_for_frontend.up.sql  20260211020000_liquidity_bridge_exchange_tables.down.sql  20260211020000_liquidity_bridge_exchange_tables.up.sql
src/: Rv - HBUK1400091WU922M-SWIFTMSG.json  Rv - offline.json  Rv-offline.json  db.rs  ledger.rs  liquidity_pull.rs  main.rs  settlement.rs
src/blockchain/: cctp.rs  ethereum.rs  mod.rs  networks.rs  provider.rs  tron.rs  tx_builder.rs
src/blockchain/contracts/: erc20.rs  erc8040.rs  mod.rs
src/ledger_flex/: commands.rs  error.rs  mod.rs  signer.rs  transport.rs
